# Hardwario_Project_Generator

./: .gitignore  CMakeLists.txt  README.md  file3.yaml  params.yaml  prj.conf  project.yaml  pyproject.toml
.west/: config
chester/: west.yml
chester-clime/src/: app_config.c
chester/applications/: project.yaml
chester/applications/aa/: Kconfig
chester/applications/aa/src/: app_shell.c
chester/applications/app/: CMakeLists.txt  Kconfig  app.overlay  project.yaml
chester/applications/app/src/: app_config.c  app_config.h  app_shell.c
chester/applications/chester-clime/: CMakeLists.txt  app.overlay  prj.conf
chester/applications/chester-clime/src/: app_config.c  app_config.h  app_shell.c
chester/applications/clime/: CMakeLists.txt  Kconfig  app.overlay  prj.conf  project.yaml
chester/applications/clime/src/: app_config.c  app_config.h  app_data.h  app_handler.c  app_shell.c  app_tamper.c  app_work.c
chester/applications/counter/: CMakeLists.txt  Kconfig  app.overlay  prj.conf  project.yaml
chester/applications/counter/src/: app_cbor.c  app_config.c  app_config.h  app_data.h  app_handler.c  app_shell.c  app_tamper.c  app_work.c  main.c
chester/applications/current/: CMakeLists.txt  Kconfig  app.overlay  prj.conf  project.yaml
chester/applications/current/src/: app_config.c  app_config.h  app_data.h  app_handler.c  app_shell.c  app_work.c
chester/applications/input/: CMakeLists.txt  Kconfig  app.overlay  prj.conf  project.yaml
chester/applications/input/src/: app_config.c  app_config.h  app_data.h  app_handler.c  app_shell.c  app_work.c
chester/applications/meteo/: CMakeLists.txt  Kconfig  app.overlay  prj.conf  project.yaml
chester/applications/meteo/src/: app_config.c  app_config.h  app_data.h  app_handler.c  app_sensor.c  app_shell.c  app_work.c
chester/applications/push/: CMakeLists.txt  Kconfig  app.overlay  prj.conf  project.yaml
chester/applications/push/src/: app_config.c  app_config.h  app_handler.c  app_shell.c  app_work.c
chester/applications/range/: CMakeLists.txt  Kconfig  app.overlay  prj.conf  project.yaml
chester/applications/range/src/: app_config.c  app_config.h  app_shell.c
chester/applications/scale/: CMakeLists.txt  Kconfig  app.overlay  prj.conf  project.yaml
chester/applications/scale/src/: app_config.c  app_config.h  app_handler.c  app_measure.c  app_shell.c
chester/applications/signal/: CMakeLists.txt  Kconfig  app.overlay  prj.conf  project.yaml
chester/applications/signal/src/: app_config.c  app_config.h  app_shell.c
chester/applications/test/: CMakeLists.txt  Kconfig  app.overlay  prj.conf  project.yaml
chester/applications/test/src/: app_config.c  app_config.h  app_shell.c
chester/scripts/: west-commands.yml
chester/scripts/west_commands/hardwario_project_generator/: chester-create.py  chester-update.py  cmake_generator.py  project_data.py  project_generator.py  west_generator.py  yaml_overlap.py
chester/scripts/west_commands/hardwario_project_generator/YAML_Modules/: CHESTER_Input.yaml
chester/scripts/west_commands/hardwario_project_generator/jinja_templates/: CMakeLists.j2  app_config_c.j2  app_config_h.j2  app_overlay.j2  app_shell_c.j2  k_config.j2  prj_conf.j2  project_yaml.j2  shell_c.j2
chester/scripts/west_commands/project_generator/: chester-create.py  chester-update.py  project_data.py  project_generator.py
chester/scripts/west_commands/project_generator/jinja_templates/: CMakeLists.j2  app_config_c.j2  app_config_h.j2  app_shell_c.j2  project_yaml.j2
chester_clime/: CMakeLists.txt  prj.conf
chester_clime/src/: app_config.c  app_config.h  app_shell.c
hardwario_project_generator/: cmake_generator.py  import_functions.py  project_generator.py  yaml_overlap.py
hardwario_project_generator/YAML_Modules/: CHESTER_Clime _1W.yaml  CHESTER_Clime _IAQ.yaml  CHESTER_Clime.yaml  CHESTER_Clime_Z.yaml
hardwario_project_generator/jinja_templates/: CMakeLists.j2  app_config_c.j2  app_config_h.j2  prj_conf.j2  shell_c.j2
hardwario_project_generator/params_source/: functions.c  includes.c
src/: app_config.c  app_config.h  app_shell.c
