[tool.poetry]
name = "hardwario-scaffold"
version = "0.1.0"
description = ""
authors = ["Enzo Frese <enzo.frese.g@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
west = "^1.2.0"
jinja2 = "^3.1.3"
pyyaml = "^6.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
